--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -1,6 +1,5 @@
-* Some examples work correctly on 64bit but don't on 32bit:
- - ex3d (fails on 1024 x 768)
- - exzbuf (face culling only works on 320x240 or less)
+* Make exampe "ex3d" similar to the original one, adding more cubes, adding
+  "fog" to the TCube class and sorting by Z axis.
 
 * Some functions don't return the correct value:
  - al_getpixel (see exalpha and compare with the original C version).
