--- a/TRUNK/examples/README
+++ b/TRUNK/examples/README
@@ -1,7 +1,8 @@
-ex3buf      - Mode-X triple buffering and retrace interrupt simulation. 
+ex3buf      - Mode-X triple buffering and retrace interrupt simulation.
 ex3d.pp     - Simple 3D demo.
-exalpha     - Creating and using 32 bit RGBA sprites. 
+exalpha     - Creating and using 32 bit RGBA sprites.
 exblend.pp  - How to use the translucency functions in truecolor video modes.
+excamera.pp - Viewing a 3D world from an arbitrary camera position.
 excolmap.pp - Creating graphical effects with color mapping tables.
 exconfig.pp - Using the configuration routines.
 excustom    - Creating custom GUI objects.
@@ -23,7 +24,7 @@ expat.pp    - Using patterned drawing modes and sub-bitmaps.
 exquat      - A comparison between Euler angles and quaternions.
 exrotscl.pp - Rotate and scale sprites.  Bitmap alpha channel.
 exsample    - Playing digital samples.
-exscale     - Loading PCX files and bitmap stretching. 
+exscale     - Loading PCX files and bitmap stretching.
 exscn3d.pp  - Using the 3d scene functions.
 exscroll    - Mode-X hardware scrolling and split screens.
 exshade.pp  - Gouraud shaded sprite example.
@@ -31,10 +32,11 @@ exspline.pp - Use of spline.
 exsprite.pp - Datafiles access and sprite animation.
 exstars     - 3D starfield and lightsourced spaceship.
 exsyscur.pp - How to use system cursors.
+extimer.pp  - Using the timer (delays and interrupts).
 extrans.pp  - Lighting and translucency effects.
 extrans2    - Drawing flipped, translucent and tinted sprites.
 extruec.pp  - Truecolor pixel format conversions.
-exxfade     - Truecolor image loading and fades. 
+exxfade     - Truecolor image loading and fades.
 exzbuf.pp   - Another 3D demo.
 
 lazarus/    - How to use Allegro.pas inside Lazarus applications.
