[4.4] * Fixed Lazarus example.  Still slow, but builds correctly and runs. * Some documentation update. * Changed some GUI colors of demo/mapedit and set F1 shorcut for help. * makefile modified to build optimized executables.

--- a/TRUNK/CHANGES
+++ b/TRUNK/CHANGES
@@ -45,6 +45,8 @@ Changes between versions 4.4.3 y 4.4.4
     impossible ;) .
   * Optimised property "UseZBuff" of "TCube".
   * Now example "ex3d" sows several cubes and shows how to create fog.
+  * Demonstration mapedit and tile/sprite engine almost redone.  Now they're
+    really re-usable.
 
 
 
