--- a/TRUNK/AUTHORS
+++ b/TRUNK/AUTHORS
@@ -11,3 +11,6 @@ Colaborators
 
   sberinde & carlejt (Allegro.pas' forum nicks)
   - Helped a lot finding bugs and testing patches for version 4.4.3.
+
+  torhu y SiegeLord (Allegro.cc forum nicks)
+  - Helped a lot telling me how to support 64bit systems.
