[5.0]   Merging old repository (#241) with new one (#221).  Don't remember everything   a too lazy to get it from repository itself.
+ Added unit al5base, that defines library names and data types for correct
  32/64bit support.  So, a lot of changes to use it.
- Removed unit al5data as it's not used anymore.
- Removed file alllegro.inc as it's not used anymore.
* Updated build scripts.
* Lots of updated documentation.

--- a/BRANCHES/5.0/TODO
+++ b/BRANCHES/5.0/TODO
@@ -1,5 +1,8 @@
 In no special order
 
+  * Check error "(...)libGLcore.so.1: undefined reference to `__moddi3'".
+    To fix it I've added al5gl to uses section of al5image and al5primitives.
+
   * Add to documentation a note about to define symbol "DEBUGMODE" if using
     "-g".
 
