--- a/BRANCHES/5.0/TODO
+++ b/BRANCHES/5.0/TODO
@@ -1,7 +1,14 @@
 In no special order
 
+  * Check error "(...)libGLcore.so.1: undefined reference to `__moddi3'".
+    To fix it I've added al5gl to uses section of al5image and al5primitives.
+
+  * Test if al5data is needed or can be finaly removed.
+
   * Add to documentation a note about to define symbol "DEBUGMODE" if using
     "-g".
+
+  * Units "al5color", "al5gl" have STRING parameters.  Add wrappers to PCHAR.
 
   * There are some "enum" types (sets). Be sure that they have the correct
     sice in bits.  Read FPC and Delphi help.
