--- a/BRANCHES/5.0/TODO
+++ b/BRANCHES/5.0/TODO
@@ -1,9 +1,10 @@
 In no special order
 
+  * Work to merge Gregor A. Cieslak's fork
+    (https://github.com/Soldat/allegro-pas5-test)
+
   * Check error "(...)libGLcore.so.1: undefined reference to `__moddi3'".
     To fix it I've added al5gl to uses section of al5image and al5primitives.
-
-  * Test if al5data is needed or can be finaly removed.
 
   * Add to documentation a note about to define symbol "DEBUGMODE" if using
     "-g".
