--- a/BRANCHES/5.0/AUTHORS
+++ b/BRANCHES/5.0/AUTHORS
@@ -1,1 +1,10 @@
   Elias (www.allegro.cc) helped testing the Delphi version.
+
+  Gregor A. Cieslak did help a lot of porting to Delphi.
+    You can get the original Cieslak's work from GitHub:
+    https://github.com/Soldat/allegro-pas5-test
+
+    NOTE: Merging Cieslak work is still WIP.
+
+  Guillermo Martínez (A.K.A Ñuño Martínez)  Did everything that nobody else did.
+
