[5.0]   + Added an "InitProgram" procedure to unit examples/common as most examples     have a lot of common stuff to initialize (Allegro, keyboard, events...).     At the moment, only the ex_bitmap example uses it.   * A few changes on units allegro5, al5base and al5nativedlg.

--- a/BRANCHES/5.0/TODO
+++ b/BRANCHES/5.0/TODO
@@ -8,6 +8,9 @@ In no special order
   * Work to merge Gregor A. Cieslak's fork
     (https://github.com/Soldat/allegro-pas5-test)
 
+  * FPC linker can't find public function al_init_native_dialog_addon (?).
+    Once fixed, modify unit Common at examples/.
+
   * Check error "(...)libGLcore.so.1: undefined reference to `__moddi3'".
     To fix it I've added al5gl to uses section of al5image and al5primitives.
 
