+ Started a new add on:  A new GUI system.

--- a/TRUNK/AUTHORS
+++ b/TRUNK/AUTHORS
@@ -1,4 +1,4 @@
-Ñuño Martínez <http://pagina.de/niunio>
+Ñuño Martínez <http://www.burdjia.com/>
  - Started the project, doing whatever nobody else did.
 
 Colaborators
