[4.4]   * Trying to fix TAllegroStream.Seek with workaround.

--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -1,3 +1,5 @@
+* Fix al_pack_fseek with workaround.
+
 * Make exampe "ex3d" similar to the original one, adding more cubes, adding
   "fog" to the TCube class and sorting by Z axis.
 
