--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -1,18 +1,22 @@
-* Fix al_pack_fseek with workaround.
+BUGS
+====
+ * Fix al_pack_fseek with workaround at add-on.
+ * al_getpixel in exalpha.  Use of 16bit integer instead of 32bit.
 
-* Some functions don't return the correct value:
- - al_getpixel (see exalpha and compare with the original C version).
+New features
+============
 
-* Check Windows alleg44.dll build parameters.  Be sure it's optimised.
+ * UNICODE.  Actually supported but there's some problems with it.
+   Should find a way to integrate it with FPC/Lazarus UNICODE support
+   (i.e. utf8string, etc.)
+ * al_set_display_switch_mode.
+ * Audio stream (all).
+ * Load MIDI using IFF instead of current.  This way we can add a "packed"
+   version of loader.
 
-+ Complete explanation of Joystick. i.e. problems with configuration file.
 
-* MIDI:
-  + load_ibk
-
-* Audio stream (all).
-
-* UNICODE
-
-  Actually supported but there's some problems with it.  Should find a way to
-  integrate it with FPC/Lazarus UNICODE support (i.e. utf8string, etc.)
+Other
+=====
+ * Remove (if possible) the MANY hint messages abour C ARRAYs.
+ * Check Windows alleg44.dll build parameters.  Be sure it's optimised.
+ + Complete explanation of Joystick. i.e. problems with configuration file.
