[4.4 alGUI]  + Added control Checkbox.  + Also, the test program shows how to simulate "radio buttons".  * Better method to find if a control wants focus.  * Reduced flickering of scroll bars and items lists.  + Now TalGUI_Dialog and controls poll keyboard and mouse if needed.

--- a/TRUNK/addons/alGUI/TODO
+++ b/TRUNK/addons/alGUI/TODO
@@ -1,1 +1,5 @@
- * Mouse should be polled.
+Try to implement actual "radio-buttons", but using TalGUI_CustomItemListControl
+as base class.  I've always feel that is a better way to do it.
+
+Add property "FocusControl" to TalGUI_Label, so if it's clicked then it passes
+focus to such control.
