[4.4]  + Added runtime OS identification.  * Updated Lazarus example.  * Windows specific stuff moved to unit alWin.

--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -15,6 +15,7 @@ New features
    version of loader.
  * Get information about available graphics modes.
  * Display switch modes.
+ * Add IDs for controllers (Windows and Linux).  This needs new units.
 
 
 Other
