[4.4]  * Fixed function al_apply_matrix_f.  Actually a workaround a possible bug    in Free Pascal compiler (MUST investigate this).  * Some functions use now "inverse logic", that may be better:    + al_scene_plolygon3d<_f>    + al_request_scrool    + al_request_video_bitmap  * Some data, parameters and return values changed from AL_INT to AL_BOOL.  * Changed some parameters to VAR, OUT and CONST, to avoid hint messages    and to optimize some.  * Procedures _al_pupixel* and _al_getpixel* rewritten to work with pointers    instead of integers, avoiding weird conversions (I still don't like to play    with pointers on Pascal anyway).  + Added al_request_refresh_rate and al_get_refresh_rate.  - Removed more wrappers as they're not needed anymore.  * Lots of fixes on documentation.

--- a/TRUNK/addons/alGUI/TODO
+++ b/TRUNK/addons/alGUI/TODO
@@ -4,6 +4,8 @@ as base class.  I've always feel that is a better way to do it.
 Add property "FocusControl" to TalGUI_Label, so if it's clicked then it passes
 focus to such control.
 
+"Slider factor calculation" should be in the custom slider.
+
 Add scroll bar to list box.
 
 Add control to deal with window close button(?).
