--- a/TRUNK/demos/alex/README
+++ b/TRUNK/demos/alex/README
@@ -40,7 +40,7 @@ Credits
     Partners In Rhyme (http://www.partnersinrhyme.com/)
 
   Sound FX:
-    Ripped from games written by Shawn Hargreaves and Johan Peitz.
+    Ripped from Shawn Hargreaves and Johan Peitz's games.
 
   Allegro originally created by Shawn Hargreaves (http://talula.demon.co.uk/)
   and currently mantained by the Allegro Development Team
