--- a/TRUNK/examples/README
+++ b/TRUNK/examples/README
@@ -1,42 +1,43 @@
 ex3buf      - Mode-X triple buffering and retrace interrupt simulation.
-ex3d.pp     - Simple 3D demo.
+ex3d        - Simple 3D demo.
 exalpha     - Creating and using 32 bit RGBA sprites.
-exblend.pp  - How to use the translucency functions in truecolor video modes.
-excamera.pp - Viewing a 3D world from an arbitrary camera position.
-excolmap.pp - Creating graphical effects with color mapping tables.
-exconfig.pp - Using the configuration routines.
+exblend     - How to use the translucency functions in truecolor video modes.
+excamera    - Viewing a 3D world from an arbitrary camera position.
+excolmap    - Creating graphical effects with color mapping tables.
+exconfig    - Using the configuration routines.
 excustom    - Creating custom GUI objects.
-exdata.pp   - Appening datafiles onto your executable.
-exdbuf.pp   - How to use double buffering to avoid flicker.
-exfixed.pp  - Using fixed point maths.
-exflip.pp   - How to use page flipping.
+exdata      - Appening datafiles onto your executable.
+exdbuf      - How to use double buffering to avoid flicker.
+exfixed     - Using fixed point maths.
+exflip      - How to use page flipping.
 exfont      - Loading and manipulating fonts.
-exgui.pp    - Using menu and dialog objects.
-exhello.pp  - Simple graphical "hello world" program.
-exhsvrgb.pp - Translating HSV space -> RGB values.
-exjoy.pp    - How to calibrate and use joysticks and pads.
-exkeys.pp   - Demonstrates how to access the keyboard.
+exgui       - Using menu and dialog objects.
+exhello     - Simple graphical "hello world" program.
+exhsvrgb    - Translating HSV space -> RGB values.
+exjoy       - How to calibrate and use joysticks and pads.
+exkeys      - Demonstrates how to access the keyboard.
 exmem       - Drawing onto memory bitmaps and then blitting them to the screen.
 exmidi      - Playing MIDI music.
-exmouse.pp  - Getting input from the mouse.
-expal.pp    - Palette effects and color cycling.
-expat.pp    - Using patterned drawing modes and sub-bitmaps.
+exmouse     - Getting input from the mouse.
+expal       - Palette effects and color cycling.
+expat       - Using patterned drawing modes and sub-bitmaps.
 exquat      - A comparison between Euler angles and quaternions.
-exrotscl.pp - Rotate and scale sprites.  Bitmap alpha channel.
+exrotscl    - Rotate and scale sprites.  Bitmap alpha channel.
 exsample    - Playing digital samples.
 exscale     - Loading PCX files and bitmap stretching.
-exscn3d.pp  - Using the 3d scene functions.
+exscn3d     - Using the 3d scene functions.
 exscroll    - Mode-X hardware scrolling and split screens.
-exshade.pp  - Gouraud shaded sprite example.
-exspline.pp - Use of spline.
-exsprite.pp - Datafiles access and sprite animation.
+exshade     - Gouraud shaded sprite example.
+exspline    - Use of spline.
+exsprite    - Datafiles access and sprite animation.
 exstars     - 3D starfield and lightsourced spaceship.
-exsyscur.pp - How to use system cursors.
-extimer.pp  - Using the timer (delays and interrupts).
-extrans.pp  - Lighting and translucency effects.
+exswitch    - Controlling the console switch mode for background running.
+exsyscur    - How to use system cursors.
+extimer     - Using the timer (delays and interrupts).
+extrans     - Lighting and translucency effects.
 extrans2    - Drawing flipped, translucent and tinted sprites.
-extruec.pp  - Truecolor pixel format conversions.
+extruec     - Truecolor pixel format conversions.
 exxfade     - Truecolor image loading and fades.
-exzbuf.pp   - Another 3D demo.
+exzbuf      - Another 3D demo.
 
 lazarus/    - How to use Allegro.pas inside Lazarus applications.
