[4.4]   * Demo Zombie renamed to Xombie3D.     At the moment, two units with linear algebra and     collision management.

--- a/TRUNK/demos/alex/README
+++ b/TRUNK/demos/alex/README
@@ -33,7 +33,7 @@ Credits
   Alex the Allegator character courtesy from:
     Johan Peitz (http://www.freelunchdesign.com/)
 
-  Title music (provisional):
+  Title music:
     Garret Thomsom (g@sirsonic.com)(ripped from the original Allegro demo game)
 
   Game music:
@@ -52,6 +52,7 @@ Credits
   Thanks to:
     the Spanish Delphi community (http://www.clubdelphi.net/)
     the Free Pascal community (http://www.freepascal.org/)
+    the Pascal Game Development community (http://www.pascalgamedevelopment.com/)
     and the Allegro community (http://www.allegro.cc/)
 
 
