[4.4]  - Removed the "demozombie3d" demo project.  Unfortunatelly I have no much time    due to real-life(tm) stuff (personal and professional).  May be when I work    on branch 5.0 I can do something.  * Small fix on excamera code.  Actually doesn't changes but makes things more    readable.

--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -12,6 +12,7 @@ New features
 
 Other
 =====
+ * Revisit the "classic" alGUI unit.
  * Remove (if possible) the MANY hint messages about C ARRAYs.
  * Check the "inverse logic" used by some functions.  In most cases they're
    "inversed" using NOT but may be it's better not to do that in some cases.
