[4.4 GUI add-on]   + Added virtual methods to get mouse status, instead of al_mouse_*.   * Now TalGUI_Control.Owner is set by virtual method.  This helps a lot     (see TalGUI_ListBox scroll bar).   * Now TalGUI_ListBox renders correctly and uses scroll bar.   * Documentation and format fixing.

--- a/TRUNK/addons/alGUI/TODO
+++ b/TRUNK/addons/alGUI/TODO
@@ -3,4 +3,4 @@ as base class.  I've always feel that is a better way to do it.
 
 "Slider factor calculation" should be in the custom slider.
 
-Add scroll bar to list box.
+Add a "bitmap control".
