--- a/TRUNK/AUTHORS
+++ b/TRUNK/AUTHORS
@@ -7,10 +7,13 @@ Colaborators
   - Helped with Delphi compatibility in version 4.2.
 
   Martin Kalbfuﬂ
-  - Helped testing and fixing the last versions.
+  - Helped testing and fixing some versions.
 
   sberinde & carlejt (Allegro.pas' forum nicks)
   - Helped a lot finding bugs and testing patches for version 4.4.3.
 
   torhu y SiegeLord (Allegro.cc forum nicks)
   - Helped a lot telling me how to support 64bit systems.
+
+  yamer (from Lazarus forum) <http://www.lazarus.freepascal.org/>
+  - Helped to identify and fix a bug in the exalpha example.
