--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -1,20 +1,16 @@
 New features
 ============
 
+ * Documentation.
  * UNICODE.  Actually supported but there's some problems with it.
    Should find a way to integrate it with FPC/Lazarus UNICODE support
    (i.e. utf8string, etc.)
  * Audio stream (all).
  * Load MIDI using IFF instead of current.  This way we can add a "packed"
    version of loader.
- * Get information about available graphics modes.
  * Sound recording/input.
 
 Other
 =====
  * Revisit the "classic" alGUI unit.
- * Remove (if possible) the MANY hint messages about C ARRAYs.
- * Check the "inverse logic" used by some functions.  In most cases they're
-   "inversed" using NOT but may be it's better not to do that in some cases.
  * Check Windows alleg44.dll build parameters.  Be sure it's optimised.
- + Complete explanation of Joystick. i.e. problems with configuration file.
