--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -1,5 +1,7 @@
 In no special order
 
+  * Check sizes of BOOLEAN types.  It seems to work (Xubuntu 14.04.4).
+
   * Sometimes it doesn't load samples.
     - It doesn't load on Fedora 64bit, but does on Ubuntu 32bit.
     - Suspect it's a problem with the funcion in C, similar than the problem
