--- a/TRUNK/AUTHORS
+++ b/TRUNK/AUTHORS
@@ -1,10 +1,12 @@
-  Elias (www.allegro.cc) helped testing the Delphi version.
+—uÒo MartÌnez <http://www.burdjia.com/>
+ - did everyghing that nobody else did.
 
-  Gregor A. Cieslak did help a lot of porting to Delphi.
-    You can get the original Cieslak's work from GitHub:
-    https://github.com/Soldat/allegro-pas5-test
+Elias (www.allegro.cc)
+ - helped testing the Delphi version (5.0 alpha).
 
-    NOTE: Merging Cieslak work is still WIP.
+Gregor A. Cieslak
+ - did help a lot of porting to Delphi.
+   You can get the original Cieslak's work from GitHub:
+   https://github.com/Soldat/allegro-pas5-test
 
-  Guillermo Mart√≠nez (A.K.A √ëu√±o Mart√≠nez)  Did everything that nobody else did.
-
+   NOTE: Merging Cieslak work is still WIP.
